--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -1,9 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.homeless.MapActivity">
+    tools:context=".MainActivity" >
 
-</android.support.constraint.ConstraintLayout>
+    <EditText
+        android:id="@+id/ReviewAddress_Input"
+        android:layout_height="wrap_content"
+        android:hint="ADDRESS"
+        android:inputType="textPersonName"
+        android:layout_width="fill_parent">
+    </EditText>
+
+</RelativeLayout>
