--- a/app/src/main/res/layout/activity_stree_reviews.xml
+++ b/app/src/main/res/layout/activity_stree_reviews.xml
@@ -7,7 +7,7 @@
     tools:context="com.homeless.StreeReviewsActivity">
 
     <ListView
-        android:id="@+id/streetReviewsList"
+        android:id="@+id/reviewsListStreet"
         android:layout_width="368dp"
         android:layout_height="495dp"
         android:layout_marginBottom="8dp"
